--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  messages:
+    basename: messages/message
+    encoding: UTF-8
 
 jwt:
   header: Authorization
